k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devops-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: devops-app

  template:
    metadata:
      labels:
        app: devops-app

    spec:
      containers:
        - name: devops-app
          image: shubham336/devops-k8s-app:1.0
          ports:
            - containerPort: 5000
